# factor-lab

./: .gitignore  DATABASE_MIGRATION_PLAN.md  HANDOFF_NOTES.md  PROJECT_OVERVIEW.md  README.md  debug_balance_sheet.py  debug_fmp_data.py  debug_future_date.py  debug_portfolio.py  fmp_implementation_plan.md  pyproject.toml  quick_test.py  run_tests.py  test_period_parameter.py  verify_setup.py
config/: environments.yaml.example  settings.yaml
data/figures/: .gitkeep
examples/: momentum_strategy.py  multi_factor_strategy.py
logs/: .gitkeep
notebooks/: getting_started.ipynb  risk_management.ipynb
results/: .gitkeep
src/factor_lab/: __init__.py
src/factor_lab/backtesting/: __init__.py
src/factor_lab/cache/: __init__.py  cache_config.py  cache_key.py  cache_manager.py  cache_strategies.py
src/factor_lab/data/: __init__.py  fmp_implementation_plan.md
src/factor_lab/factors/: __init__.py
src/factor_lab/portfolio/: __init__.py
src/factor_lab/utils/: __init__.py
src/factor_lab/visualization/: __init__.py
tests/: __init__.py  test_accepted_date.py  test_cache_architecture.py  test_cache_integration.py  test_cache_optimization.py  test_core.py  test_data_quality.py  test_fmp_methods.py  test_forward_fill_redesign.py  test_get_fundamental_factors.py  test_multi_statement_accepted_date.py  test_price_integration.py  test_story_2_2.py  test_validation_methods.py
